# VisualInertialKinectFusion

./: README.md
PCViewer/: AHRSOnKin.txt  AdaOnKin.txt  AdaOnNexCave.txt  CMakeLists.txt  NexCaveOnKin.txt  PCViewer.pro  README.md  define.h
PCViewer/Calibration/: calibrationwindow.cpp  calibrationwindow.h  calibrationwindow.ui
PCViewer/Devices/: adafruit_uart.h  kinect.cpp  kinect.h
PCViewer/Elaboration/: SINECO_Ponte.cpp  SINECO_Ponte.h  SINECO_Ponte.ui  SINECO_Transformation.cpp  SINECO_Transformation.h  SINECO_Transformation.ui  description_keypoints.cpp  description_keypoints.h  description_keypoints.ui  elaboration_lf_rec.cpp  elaboration_lf_rec.h  elaboration_lf_rec.ui  elaboration_papazov.cpp  elaboration_papazov.h  elaboration_papazov.ui  features_keypoints.cpp  features_keypoints.h  features_keypoints.ui  features_normal.cpp  features_normal.h  features_normal.ui  filters_downsampling.cpp  filters_downsampling.h  filters_downsampling.ui  registration_LUM.cpp  registration_LUM.h  registration_LUM.ui  registration_correspondenceestimation.cpp  registration_correspondenceestimation.h  registration_correspondenceestimation.ui  registration_correspondencerejection.cpp  registration_correspondencerejection.h  registration_correspondencerejection.ui  registration_icp.cpp  registration_icp.h  registration_icp.ui  registration_keypoints.cpp  registration_keypoints.h  registration_keypoints.ui  registration_ransac.cpp  (+8 more)
PCViewer/Elaboration/Calibration/: calibration_adafruit.cpp  calibration_adafruit.h  calibration_adafruit.ui
PCViewer/Elaboration/Filters/: filters_mls.cpp  filters_mls.h  filters_mls.ui  filters_others.cpp  filters_others.h  filters_others.ui  filters_outliers.cpp  filters_outliers.h  filters_outliers.ui  filters_roi.cpp  filters_roi.h  filters_roi.ui  filters_voxel_grid.cpp  filters_voxel_grid.h  filters_voxel_grid.ui
PCViewer/Icon/: Icon.qrc
PCViewer/KinFu/: KinFuApp.h  KinFuBatch.cpp  KinFuBatch.h  KinFuBatch.ui  KinFuWindow.cpp  KinFuWindow.h  KinFuWindow.ui  KinFuWindowLight.cpp  KinFuWindowLight.h  KinFuWindowLight.ui  PoseAdafruit.txt  estimate_combined.cu  internal.h  kinfu.cpp  kinfu.h  test2KinFu.cpp  testKinFu (copy).cpp  testKinFu.cpp  testKinFu2.cpp  testKinFuGUI.cpp  testKinFuGUI2.cpp  tsdf_volume.cpp
PCViewer/KinFu2/: kinfu.cpp  kinfu_app.cpp.backup  myKinFu.cpp
PCViewer/PCViewer/: kinecttab.cpp  kinecttab.h  kinecttab.ui  mainwindow.cpp  mainwindow.ui  modelpointcloudlist.cpp  modelpointcloudlist.h
PCViewer/PCViewer2/: kinecttab.cpp  kinecttab.h  mainwindow.h  modelpointcloudlist.cpp  modelpointcloudlist.h
PCViewer/SLAM/: testSLAM.cpp
PCViewer/Tests/: KinectViewer.cpp  KinectViewer.h  KinectViewer.ui  metrologicalQualification.cpp  testAdaFruit.cpp  testBRISK.cpp  testGPU.cpp  testKinect.cpp  testKinect2.cpp  testKinect2Adafruit.cpp  testKinect2D.cpp  testKinectGUI.cpp  testMultipleKinect2.cpp  testMyAHRS.cpp  testNexCave.cpp
PCViewer/Widgets/: cloudviewer.cpp  cloudviewer.h  cloudviewer.ui  transformationmatrixspinbox.cpp  transformationmatrixspinbox.h  transformationmatrixspinbox.ui
data/: environment.yml  evaluate_ate.py  evaluate_rpe.py  generate_registered_pointcloud_organized.py
pcl/cmake/: pcl_find_qt5.cmake
pcl/common/include/pcl/common/: time.h
pcl/gpu/kinfu/: CMakeLists.txt
pcl/gpu/kinfu/include/pcl/gpu/kinfu/: kinfu.h
pcl/gpu/kinfu/src/: internal.h  kinfu.cpp
pcl/gpu/kinfu/src/cuda/: coresp.cu  estimate_combined.cu
pcl/gpu/kinfu/test/: CMakeLists.txt
pcl/gpu/kinfu/tools/: CMakeLists.txt  kinfu_app.cpp
pcl/registration/: CMakeLists.txt
pcl/registration/include/pcl/registration/: transformation_estimation_translation.h
pcl/registration/include/pcl/registration/impl/: transformation_estimation_translation.hpp
pcl/registration/src/: transformation_estimation_translation.cpp
pcl/sample_consensus/: CMakeLists.txt
pcl/sample_consensus/include/pcl/sample_consensus/: model_types.h  sac_model_registration_translation.h
pcl/sample_consensus/include/pcl/sample_consensus/impl/: sac_model_registration_translation.hpp
